deploy/flightctl/ingress-agent-api.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edgemanager-alb-ingress-agent-api
  namespace: flightctl
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:298468956706:certificate/331dceba-82ea-4e97-a02d-e92ba260407e
    alb.ingress.kubernetes.io/mutual-authentication: >
      [{
        "mode": "verify",
        "trustStore": "arn:aws:acm:us-west-2:298468956706:certificate/331dceba-82ea-4e97-a02d-e92ba260407e",
        "ignoreClientCertificateExpiry": false,
        "port": 443,
        "advertiseTrustStoreCaNames": "off"
      }]
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: "3443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  ingressClassName: alb
  rules:
    - host: agent-api.flightctl.sandbox3174.opentlc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flightctl-api-agent
                port:
                  number: 7443

...
