deploy/flightctl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edgemanager-alb-ingress-ui
  namespace: flightctl
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]' # '[{"HTTPS":443}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:514314268914:certificate/a8401c07-72b4-42d7-a4a4-457e74a06ccd
    alb.ingress.kubernetes.io/group.name: edge-manager-alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: ui.flightctl.edgedemos.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flightctl-ui
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edgemanager-alb-ingress-api
  namespace: flightctl
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:514314268914:certificate/c4595170-4d71-4a87-ab34-f3642bad2568
    alb.ingress.kubernetes.io/group.name: edge-manager-alb
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  ingressClassName: alb
  rules:
    - host: api.flightctl.edgedemos.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flightctl-api
                port:
                  number: 3443

...
